--- a/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/其它/02_数值扩展.html
+++ b/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/其它/02_数值扩展.html
@@ -14,14 +14,14 @@
 6. Math.trunc(i) : 直接去除小数部分
 -->
 <script type="text/javascript">
-    console.log(0b1010);//10
-    console.log(0o56);//46
+    console.log(0b1010);  //10
+    console.log(0o56);    //46
     //Number.isFinite(i) : 判断是否是有限大的数
-    console.log(Number.isFinite(NaN));//false
-    console.log(Number.isFinite(5));//true
+    console.log(Number.isFinite(Infinity));//false
+    console.log(Number.isFinite(5));      //true
     //Number.isNaN(i) : 判断是否是NaN
-    console.log(Number.isNaN(NaN));//true
-    console.log(Number.isNaN(5));//falsse
+    console.log(Number.isNaN(NaN));  //true
+    console.log(Number.isNaN(5));   //falsse
 
     //Number.isInteger(i) : 判断是否是整数
     console.log(Number.isInteger(5.23));//false
