--- a/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/其它/04_对象扩展.html
+++ b/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/其它/04_对象扩展.html
@@ -5,40 +5,36 @@
   <title>04_对象扩展</title>
 </head>
 <body>
-<!--
-1. Object.is(v1, v2)
-  * 判断2个数据是否完全相等
-2. Object.assign(target, source1, source2..)
-  * 将源对象的属性复制到目标对象上
-3. 直接操作 __proto__ 属性
-  let obj2 = {};
-  obj2.__proto__ = obj1;
--->
+  <!--
+  1. Object.is(v1, v2)
+    * 判断2个数据是否完全相等
+  2. Object.assign(target, source1, source2..)
+    * 将源对象的属性复制到目标对象上
+  3. 直接操作 __proto__ 属性
+    let obj2 = {};
+    obj2.__proto__ = obj1;
+  -->
 
-<script type="text/javascript">
+  <script type="text/javascript">
+    console.log(0 == -0);    //true
+    console.log(NaN == NaN); //false
 
-    console.log(Object.is('abc', 'abc'));//true
-    console.log(NaN == NaN);//false
-    console.log(Object.is(NaN, NaN));//true
+    //根据字符串形式来判断的
+    console.log(Object.is(0, -0));   //false
+    console.log(Object.is(NaN, NaN)); //true
 
-    console.log(0 == -0);//true
-    console.log(Object.is(0, -0));//false
+    let obj = {};
+    let obj1 = {username: 'army', age: 6};
+    let obj2 = {sex: '女'};
+    Object.assign(obj, obj1, obj2);
+    console.log(obj);   //{username: "army", age: 6, sex: "女"}
 
-    //Object.assign(target, source1, source2..)
-    let obj = {name : 'kobe', age : 39, c: {d: 2}};
-    let obj1 = {};
-    Object.assign(obj1, obj);
-    console.log(obj1, obj1.name);
-
-    //直接操作 __proto__ 属性
-    let obj3 = {name : 'anverson', age : 41};
-    let obj4 = {};
-    obj4.__proto__ = obj3;
-    console.log(obj4, obj4.name, obj4.age);
-  
-  
-
-</script>
+    let obj3 = {};
+    let obj4 = {money: 5000000};
+    obj3.__proto__ = obj4;   //obj4是obj3的原型
+    console.log(obj3);
+    console.log(obj3.money);  //5000000
+  </script>
 </body>
 
 </html>
