--- a/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/其它/04_深度克隆.html
+++ b/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/其它/04_深度克隆.html
@@ -7,95 +7,177 @@
 <body>
 
 
-<!--
-  1、数据类型：
-    * 数据分为基本的数据类型(String, Number, boolean, Null, Undefined)和对象数据类型
-    - 基本数据类型：
-      特点： 存储的是该对象的实际数据
-    - 对象数据类型：
-      特点： 存储的是该对象在栈中引用，真实的数据存放在堆内存里
-  2、复制数据
-    - 基本数据类型存放的就是实际的数据，可直接复制
-      let number2 = 2;
-      let number1 = number2;
-    - 克隆数据：对象/数组
-      1、区别： 浅拷贝/深度拷贝
-         判断： 拷贝是否产生了新的数据还是拷贝的是数据的引用
-         知识点：对象数据存放的是对象在栈内存的引用，直接复制的是对象的引用
-         let obj = {username: 'kobe'}
-         let obj1 = obj; // obj1 复制了obj在栈内存的引用
-      2、常用的拷贝技术
-        1). arr.concat(): 数组浅拷贝
-        2). arr.slice(): 数组浅拷贝
-        3). JSON.parse(JSON.stringify(arr/obj)): 数组或对象深拷贝, 但不能处理函数数据
-        4). 浅拷贝包含函数数据的对象/数组
-        5). 深拷贝包含函数数据的对象/数组
--->
-<script type="text/javascript">
-  // 复制的对象的方式
-  // 浅度复制
-  let obj = {username: 'kobe', age: 39, sex: {option1: '男', option2: '女'}};
-  let obj1 = obj;
-  console.log(obj1);
-  obj1.sex.option1 = '不男不女'; // 修改复制的对象会影响原对象
-  console.log(obj1, obj);
-  
-  console.log('-----------');
-  // Object.assign();  浅复制
-  let obj2 = {};
-  Object.assign(obj2, obj);
-  console.log(obj2);
-  obj2.sex.option1 = '男'; // 修改复制的对象会影响原对象
-  console.log(obj2, obj);
+  <!--
+    1、数据类型：
+      * 数据分为基本的数据类型(String, Number, boolean, Null, Undefined)和对象数据类型
+      - 基本数据类型：
+        特点： 存储的是该对象的实际数据
+      - 对象数据类型：
+        特点： 存储的是该对象在栈中引用，真实的数据存放在堆内存里
+    2、复制数据
+      - 基本数据类型存放的就是实际的数据，可直接复制
+        let number2 = 2;
+        let number1 = number2;
+      - 克隆数据：对象/数组
+        1、区别： 浅拷贝/深度拷贝
+           判断： 拷贝是否产生了新的数据还是拷贝的是数据的引用
+           知识点：对象数据存放的是对象在栈内存的引用，直接复制的是对象的引用
+           let obj = {username: 'kobe'}
+           let obj1 = obj; // obj1 复制了obj在栈内存的引用
+        2、常用的拷贝技术
+          1). arr.concat(): 数组浅拷贝
+          2). arr.slice(): 数组浅拷贝
+          3). JSON.parse(JSON.stringify(arr/obj)): 数组或对象深拷贝, 但不能处理函数数据
+          4). 浅拷贝包含函数数据的对象/数组
+          5). 深拷贝包含函数数据的对象/数组
+  -->
+  <script type="text/javascript">
+    /*//不会影响原数据
+    let str = 'abcd';
+    let str2 = str;
+    console.log(str2);  //abcd
+    str2 = '';
+    console.log(str);  //abcd
+    let bool1 = true;
+    let bool2 = bool1;
+    bool2 = false;
+    console.log(bool1);  //true
 
-  // 深度克隆(复制)
+    //会影响原数据
+    //在复制一份对象的时候，不是真正的生成了一份数据，而是复制了一份引用给它，指向的还是原来的对象
+    let obj = {username: 'army', age: 6};
+    let obj1 = obj;
+    console.log(obj1);   //{username: "army", age: 6}
+    obj1.username = 'BTS';
+    console.log(obj.username);    //BTS
 
-  function getObjClass(obj) {
-    let result = Object.prototype.toString.call(obj).slice(8, -1);
-    if(result === 'Null'){
-      return 'Null';
-    }else if(result === 'Undefined'){
-      return 'Undefined';
-    }else {
+    //拷贝数组/对象，没有生成新的数据，而是复制了一份引用
+    let arr = [1, 4, {username: 'koke', age: 39}];
+    let arr2 = arr;
+    arr2[0] = 'abcd';
+    console.log(arr);    //["abcd", 4, {username: 'koke', age: 39}]
+    console.log(arr2);   //["abcd", 4, {username: 'koke', age: 39}]
+    */
+    /*
+    * 拷贝数据：
+    *     基本数据类型：
+    *       拷贝后会生成一份新的数据，修改拷贝以后的数据不会影响原数据
+    *     对象、数组：
+    *       拷贝后不会生成新的数据，而是拷贝的是引用，修改拷贝以后的数据会影响原来的数据
+    * 拷贝数据的方法：
+    *   1、直接复制给一个变量    //浅拷贝
+    *   2、Object.assign()    //浅拷贝
+    *   3、Array.prototype.concat()   //浅拷贝
+    *   4、Array.prototype.slice()    //浅拷贝
+    *   5、JSON.parse(JSON.stringify())  //深拷贝（深度克隆）  拷贝的数据里不能有函数，处理不了
+    * 浅拷贝（对象/数据）：
+    *     特点：拷贝的是引用，修改拷贝以后的数据会影响原来的数据，使得原数据不安全
+    * 深拷贝（深度克隆）：
+    *     特点：拷贝的时候生成新数据，修改拷贝以后的数据不会影响原来的数据
+    * */
+
+    /*let obj = {username: 'army'};
+    let obj2 = Object.assign(obj);
+    console.log(obj2);    //{username: "army"}
+    obj2.username = 'bts';
+    console.log(obj);     //{username: "bts"}*/
+
+    /* let arr = [1, 3, {username: 'army'}, function fun() {}];
+     // let testArr = [2, 4];
+     let arr2 = arr.concat();
+     // arr2[2] = {username: 'army'};
+     console.log(arr2);     //[1, 3, {username: 'army'}]
+     // arr2[1] = 'a';
+     // console.log(arr);     //[1, 3, {username: 'army'}]
+     arr2[2].username = 'wade';
+     console.log(arr);        //[1,3,{username: 'wade'}]
+
+     let arr3 = arr.slice();
+     arr3[2].username = 'anverson';
+     console.log(arr);       //[1,3,{username: 'anverson'}]
+
+     console.log('----------------------------');
+     let arr4 = JSON.parse(JSON.stringify(arr));
+     console.log(arr4);     //[1,3,{username: 'anverson'}]
+     arr4[2].username = 'duncan';
+     console.log(arr, arr4);  //[1,3,{username: 'anverson'}]  [1,3,{username: 'duncan'}]
+ */
+
+
+    /*
+    * 思考：
+    *   如何实现深度拷贝（克隆）
+    *   拷贝的数据里有对象/数组
+    *   拷贝的数据里不能有对象/数组，即使有对象/数组，
+    *     可以继续去遍历对象/数组拿到里面每一项值，一直到拿到的是基本数据类型
+    *     然后再去复制，就是深拷贝（克隆）
+    * */
+
+    //知识点储备
+    /*
+    * 1、如何判断数据类型：arr--->Array   null--Null
+    *     1.typeof返回的数据类型：String,Number,boolean,Undefined,Object,Function
+    *     2.Object.prototype.toString.call(obj)    call绑定this，让绑定的数据类型去调它
+    * */
+    let result = 'abcd';
+    result = null;
+    result = [1, 3];
+    console.log(Object.prototype.toString.call(result).slice(8, -1));   //Array
+
+    //2、for in 循环 对象（属性名） 数组（下标）
+    let obj = {username: 'army', age: 6};
+    for (var i in obj) {
+      console.log(i);   //username age
+    }
+    let arr = [6, 13, 'abc'];
+    for (var i in arr) {
+      console.log(i);  //0 1 2
+    }
+
+    //定义检测数据类型的功能函数
+    function checkedType(target) {
+      return Object.prototype.toString.call(target).slice(8, -1)
+    }
+
+    //实现深度克隆---->对象、数组
+    function clone(target) {
+      //判断拷贝的数据类型
+      //初始化变量result 成为最终克隆的数据
+      let result, targetType = checkedType(target);
+      if (targetType === 'Object') {
+        result = {};
+      } else if (targetType === 'Array') {
+        result = [];
+      } else {
+        return target;
+      }
+
+      //遍历目标数据
+      for (var i in target) {
+        //获取遍历数据结构的每一项值
+        let value = target[i];
+        //判断目标结构里的每一项值是否存在对象/数组
+        if (checkedType(value) === 'Object' || checkedType(value) === 'Array') {//对象/数组里又嵌套了对象/数组
+          //继续遍历获取到的value值
+          result[i] = clone(value);
+        } else {//获取到的value值是基本的数据类型或者是函数
+          result[i] = value;
+        }
+      }
       return result;
     }
-  }
-  // for in 遍历数组的时候遍历的是下标
-  let testArr = [1,2,3,4];
-  for(let i in testArr){
-    console.log(i); // 对应的下标索引
-  }
-
-  // 深度克隆
-  function deepClone(obj) {
-    let result, objClass = getObjClass(obj);
-    if(objClass === 'Object'){
-      result = {};
-    }else if(objClass === 'Array'){
-      result = [];
-    }else {
-      return obj; // 如果是其他数据类型不复制，直接将数据返回
-    }
-    // 遍历目标对象
-    for(let key in obj){
-      let value = obj[key];
-      if(getObjClass(value) === "Object" || 'Array'){
-        result[key] = deepClone(value);
-      }else {
-        result[key] = obj[key];
-      }
-    }
-    return result;
-  }
-  
-  
-  let obj3 = {username: 'kobe',age: 39, sex: {option1: '男', option2: '女'}};
-  let obj4 = deepClone(obj3);
-  console.log(obj4);
-  obj4.sex.option1 = '不男不女'; // 修改复制后的对象不会影响原对象
-  console.log(obj4, obj3);
-
-
-</script> 
+    //克隆数组
+    let arr3 = [20,13,{username:'BTS',age:6}];
+    let arr4 = clone(arr3);
+    console.log(arr4);
+    arr4[2].username = 'army';
+    console.log(arr3,arr4);
+    //克隆对象
+    let obj3 = {username:'army',age:6};
+    let obj4 = clone(obj3);
+    console.log(obj4);
+    obj4.username = 'cat';
+    console.log(obj3,obj4);
+  </script>
 </body>
 </html>
