--- a/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/10_Symbol.html
+++ b/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/10_Symbol.html
@@ -10,7 +10,7 @@
     Symbol：
       概念：ES6中的添加了一种原始数据类型symbol(已有的原始数据类型：String, Number, boolean, null, undefined, 对象)
       特点：
-        1、Symbol属性对应的值是唯一的，解决命名冲突问题
+        1、Symbol属性值对应的值是唯一的，解决命名冲突问题
         2、Symbol值不能与其他数据进行计算，包括同字符串拼串
         3、for in, for of遍历时不会遍历symbol属性。
       使用：
@@ -31,22 +31,28 @@
   -->
 
 
-<script type="text/javascript">
-    window.onload = function () {
-      let symbol = Symbol();
-      console.log(typeof symbol);
-      console.log(symbol);
-      
-      // 用作对象的属性(唯一)
-      let obj = {username: 'kobe', age: 39};
-      obj[symbol] = 'hello';
-      obj[symbol] = 'symbol';
-      console.log(obj);
-      for(let i in obj){
-        console.log(i);
-      }
+  <script type="text/javascript">
+    //创建symbol属性值
+    let symbol = Symbol();
+    console.log(symbol);
+    let obj = {username: 'koke', age: 39};
+    obj[symbol] = 'hello';
+    console.log(obj);
+    //for in,for of 不能遍历sysmbol属性
+    for (let i in obj) {
+      console.log(i)
     }
-</script>
+
+    let symbol2 = Symbol('one');
+    let symbol3 = Symbol('two');
+    console.log(symbol2 == symbol3);
+    console.log(symbol2, symbol3);
+
+    //可以去定义常量
+    const Person_key = Symbol('person_key');
+    console.log(Person_key);
+
+  </script>
 
 </body>
 </html>
