--- a/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/11_Iterator遍历器.html
+++ b/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/11_Iterator遍历器.html
@@ -28,51 +28,72 @@
   -->
 
   <script type="text/javascript">
-      window.onload = function () {
-        // 自定义iterator生成指针对象
-        function mockIterator(arr) {
-          let nextIndex = 0;
-          return {
-            next: function () {
-              return nextIndex<arr.length?{value: arr[nextIndex++], done: false}:{value: undefined, done: true}
-            }
+    //模拟指着对象（遍历器对象）
+    function myiterator(arr) {//iterator接口
+      let nextIndex = 0;   //记录指针的位置
+      return {//遍历器对象
+        next: function () {
+          return nextIndex < arr.length ? {value: arr[nextIndex++], done: false} : {value: undefined, done: true}
+        }
+      }
+    }
+
+    //准备一个数据
+    let arr = [1, 6, 13, 'abc'];
+    let interatorObj = myiterator(arr);
+    console.log(interatorObj.next());
+    console.log(interatorObj.next());
+    console.log(interatorObj.next());
+    console.log(interatorObj.next());
+    console.log(interatorObj.next());
+    console.log(interatorObj.next());
+
+    //将interator接口部署到指定的数据类型上，可以使用for of 去循环遍历
+    //数组，字符串，arguments，set容器，map容器
+    //数组
+    for (let i of arr) {
+      console.log(i);
+    }
+    //字符串
+    let str = 'abcdefgh';
+    for (let i of str) {
+      console.log(i);
+    }
+
+    //arguments:是一个伪数组,没有数组的一般方法
+    function fun() {
+      for (let i of arguments) {
+        console.log(i);
+      }
+    }
+    fun(13, 6, 13, 'abc');
+
+    /* let obj = {username: 'koke', age: 39};
+       for (let i of obj) {
+         console.log(i);    obj is not iterable
+       }*/
+
+    //等同于在指定的数据内结构上部署了interator接口
+    //当使用for of去遍历某一个数据结构的时候，首先去找Symbol.interator,找到了就去遍历，没有找到就不能遍历 xxx is not iterable
+    let targetData = {
+      [Symbol.iterator]: function () {
+        let nextIndex = 0;   //记录指针的位置
+        return {//遍历器对象
+          next: function () {
+            return nextIndex < this.length ? {value: this[nextIndex++], done: false} : {value: undefined, done: true}
           }
         }
-
-        let arr = [1,2,3,4,5];
-        let iteratorObj = mockIterator(arr);
-        console.log(iteratorObj.next());
-        console.log(iteratorObj.next());
-        console.log(iteratorObj.next());
-
-
-        // 使用解构赋值以及...三点运算符时会调用iterator接口
-        let arr1 = [1,2,3,4,5];
-        let [value1, ...arr2] = arr1;
-        // yield*语句
-        function* generatorObj() {
-          yield '1'; // 可遍历数据，会自动调用iterator函数
-          yield '3';
-        }
-        let Go = generatorObj();
-        console.log(Go.next());
-        console.log(Go.next());
-        console.log(Go.next());
-
-
-        // 原生测试  数组
-        let arr3 = [1, 2, 'kobe', true];
-        for(let i of arr3){
-          console.log(i);
-        }
-        // 字符串  string
-        let str = 'abcdefg';
-        for(let item of str){
-          console.log(item);
-        }
-        
-
       }
+    }
+
+    //使用三点运算符，结构赋值，默认去调用interator接口
+    let arr2 = [1, 6];
+    let arr3 = [2, 3, 4, 5];
+    arr2 = [1, ...arr3, 6];
+    console.log(arr2);    //1,2,3,4,5,6
+
+    let [a, b] = arr2;
+    console.log(a,b);    //1,2
   </script>
 </body>
 </html>
