--- a/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/12_Generator函数.html
+++ b/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/12_Generator函数.html
@@ -26,40 +26,43 @@
       5、再次调用next方法会从上一次停止时的yield处开始，直到最后
       6、yield语句返回结果通常为undefined， 当调用next方法时传参内容会作为启动时yield语句的返回值。
   -->
-<script type="text/javascript" src="./js/jquery-1.10.1.min.js"></script>
-<script type="text/javascript">
-    // 小试牛刀
-    function* generatorTest() {
-      console.log('函数开始执行');
-      yield 'hello';
-      console.log('函数暂停后再次启动');
+  <script type="text/javascript" src="./js/jquery-1.10.1.min.js"></script>
+  <script type="text/javascript">
+    //小试牛刀
+    function* myGenerator() {
+      console.log('开始执行');
+      let result = yield 'hello';
+      //console.log(result);    //undefined
+      console.log('暂停后，再次执行');
       yield 'generator';
+      console.log('遍历完毕');
+      //return '返回的结果';     //{value: "返回的结果", done: true}
     }
-    // 生成遍历器对象
-    let Gt = generatorTest();
-    // 执行函数，遇到yield后即暂停
-    console.log(Gt); // 遍历器对象
-    let result = Gt.next(); // 函数执行,遇到yield暂停
-    console.log(result); // {value: "hello", done: false}
-    result = Gt.next(); // 函数再次启动
-    console.log(result); // {value: 'generator', done: false}
-    result = Gt.next();
-    console.log(result); // {value: undefined, done: true}表示函数内部状态已经遍历完毕
 
-    // 对象的Symbol.iterator属性;
-    let myIterable = {};
-    myIterable[Symbol.iterator] = function* () {
+    let MG = myGenerator();  //返回的是指针对象
+    console.log(MG);       //遍历器对象
+    let result = MG.next(); //函数执行，遇到yield暂停
+    console.log(result);   //{value: "hello", done: false}
+    result = MG.next();    //函数再次启动
+    console.log(result);   //{value: "generator", done: false}
+    result = MG.next();
+    console.log(result);   //{value: "undefined", done: true}表示函数内部已经遍历完毕
+
+    //对象的symbol.interator属性，指向遍历器对象
+    let obj = {username: 'BTS', age: 6};
+    /*for(let i of obj){
+      console.log(i);    //obj is not iterable
+    }*/
+    obj[Symbol.iterator] = function* myTest() {
       yield 1;
       yield 2;
-      yield 4;
-    };
-    for(let i of myIterable){
+      yield 3;
+    }
+    for(let i of obj){
       console.log(i);
     }
-    let obj = [...myIterable];
-    console.log(obj);
 
-    console.log('-------------------------------');
+
     // 案例练习
     /*
     * 需求：
@@ -67,31 +70,23 @@
     * 2、新闻内容获取成功后再次发送请求，获取对应的新闻评论内容
     * 3、新闻内容获取失败则不需要再次发送请求。
     * 
-    * */ 
-    function* sendXml() {
-      // url为next传参进来的数据
-     let url = yield getNews('http://localhost:3000/news?newsId=2');
-      yield getNews(url);
-    }
+    * */
     function getNews(url) {
-      $.get(url, function (data) {
+      $.get(url,function (data) {
         console.log(data);
-        let commentsUrl = data.commentsUrl;
-        let url = 'http://localhost:3000' + commentsUrl;
-        // 当获取新闻内容成功，发送请求获取对应的评论内容
-        // 调用next传参会作为上次暂停是yield的返回值
-        sx.next(url);
+        let url = 'http://localhost:3000' + data.commentsUrl;
+        SX.next(url);
       })
     }
 
-
-    let sx = sendXml();
-    // 发送请求获取新闻内容
-    sx.next();
-
-    
-
-</script>
+    function* sendXml(){
+      let url = yield getNews('http://localhost:3000/news?id=3');
+      yield getNews(url);
+    }
+    //获取遍历器对象
+    let SX = sendXml();
+    SX.next();
+  </script>
 
 
 </body>
