--- a/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/13_async函数.html
+++ b/尚硅谷/(9)ES5_6_7/ES5_6_7/prepare/es6/常用/13_async函数.html
@@ -6,71 +6,81 @@
 </head>
 <body>
 
-<!--
-  async函数(源自ES2017)
-  概念： 真正意义上去解决异步回调的问题，同步流程表达异步操作
-  本质： Generator的语法糖
-  语法：
-      async function foo(){
-        await 异步操作;
-        await 异步操作；
-      }
-  特点：
-    1、不需要像Generator去调用next方法，遇到await等待，当前的异步操作完成就往下执行
-    2、返回的总是Promise对象，可以用then方法进行下一步操作
-    3、async取代Generator函数的星号*，await取代Generator的yield
-    4、语意上更为明确，使用简单，经临床验证，暂时没有任何副作用
+  <!--
+    async函数(源自ES2017)
+    概念： 真正意义上去解决异步回调的问题，同步流程表达异步操作
+    本质： Generator的语法糖
+    语法：
+        async function foo(){
+          await 异步操作;
+          await 异步操作；
+        }
+    特点：
+      1、不需要像Generator去调用next方法，遇到await等待，当前的异步操作完成就往下执行
+      2、返回的总是Promise对象，可以用then方法进行下一步操作
+      3、async取代Generator函数的星号*，await取代Generator的yield
+      4、语意上更为明确，使用简单，经临床验证，暂时没有任何副作用
 
--->
-<script type="text/javascript" src="./js/jquery-1.10.1.min.js"></script>
-<script type="text/javascript">
-    async function timeout(ms) {
+  -->
+  <script type="text/javascript" src="./js/jquery-1.10.1.min.js"></script>
+  <script type="text/javascript">
+    //async 基本使用
+    async function foo() {
       return new Promise(resolve => {
-        setTimeout(resolve, ms);
+        /* setTimeout(function () {
+           resolve();
+         },2000);*/
+        setTimeout(resolve, 2000);
       })
     }
-    
-    async function asyncPrint(value, ms) {
-      console.log('函数执行', new Date().toTimeString());
-      await timeout(ms);
-      console.log('延时时间', new Date().toTimeString());
-      console.log(value);
-    }
+    /* async function test() {
+       console.log('开始执行',new Date().toTimeString());
+       await foo();
+       console.log('执行完毕...',new Date().toTimeString());
+     }
+     test();*/
 
-    console.log(asyncPrint('hello async', 2000));
-    
-    // await 
-    async function awaitTest() {
-      let result = await Promise.resolve('执行成功');
-      console.log(result);
-      let result2 = await Promise.reject('执行失败');
-      console.log(result2);
-      let result3 = await Promise.resolve('还想执行一次');// 执行不了
-      console.log(result3);
+    //async里await返回值
+  /*  function test2() {
+      return 'xxx';
     }
-    awaitTest();
-  
-  
-    // 案例演示
-    async function sendXml(url) {
+    async function asyncPtint() {
+      // let result = await test2();  //xxx
+      let result = await Promise.resolve('promise'); //promise
+      console.log(result);
+      result = await Promise.reject('失败了');
+      console.log(result);
+    }
+    asyncPtint();*/
+
+
+    //应用：获取新闻内容
+    async function getNews(url) {
       return new Promise((resolve, reject) => {
         $.ajax({
-          url,
-          type: 'GET',
-          success: data =>  resolve(data),
-          error: error => reject(error)
+          method: 'GET',
+          url,     // url:url,
+          success: data => resolve(data),
+          /*success:function(data){
+            resolve();
+          },*/
+          // error: error => reject(error),
+          error: error => resolve(false)
         })
       })
     }
-
-    async function getNews(url) {
-      let result = await sendXml(url);
-      let result2 = await sendXml(url);
-      console.log(result, result2);
+    async function sendXml() {
+      let result = await getNews('http://localhost:3000/news?id=7');
+      console.log(result);
+      if(!result){
+        alert('暂时没有新闻推送！');
+        return ;
+      }
+      result = await getNews('http://localhost:3000'+result.commentsUrl);
+      console.log(result);
     }
-    getNews('http://localhost:3000/news?id=2')
-
-</script>
+    sendXml();
+  </script>
 
 </body>
 </html>
